[gd_scene load_steps=5 format=3 uid="uid://scripteditor_scene"]

[ext_resource type="PackedScene" path="res://scenes/Window.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/ScriptEditor.gd" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_code"]
bg_color = Color(0.06, 0.07, 0.1, 1)
border_color = Color(0.2, 0.2, 0.3, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_output"]
bg_color = Color(0.04, 0.05, 0.07, 1)
border_color = Color(0.15, 0.2, 0.3, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_toolbar"]
bg_color = Color(0.1, 0.1, 0.15, 1)

[node name="ScriptEditor" instance=ExtResource("1")]
size = Vector2(640, 580)

[node name="ScriptEditorApp" type="MarginContainer" parent="VBox/Content"]
script = ExtResource("2")
layout_mode = 2
size_flags_vertical = 3
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/Content/ScriptEditorApp"]
layout_mode = 2
size_flags_vertical = 3
size_flags_horizontal = 3

[node name="Toolbar" type="HBoxContainer" parent="VBox/Content/ScriptEditorApp/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 32)
theme_override_styles/panel = SubResource("StyleBoxFlat_toolbar")

[node name="RunButton" type="Button" parent="VBox/Content/ScriptEditorApp/VBoxContainer/Toolbar"]
layout_mode = 2
text = " â–¶ Run "
theme_override_colors/font_color = Color(0.3, 1.0, 0.5, 1)
theme_override_font_sizes/font_size = 13

[node name="SaveButton" type="Button" parent="VBox/Content/ScriptEditorApp/VBoxContainer/Toolbar"]
layout_mode = 2
text = " ðŸ’¾ Save "
theme_override_colors/font_color = Color(0.6, 0.9, 1.0, 1)
theme_override_font_sizes/font_size = 12

[node name="OpenButton" type="Button" parent="VBox/Content/ScriptEditorApp/VBoxContainer/Toolbar"]
layout_mode = 2
text = " ðŸ“‚ Open "
theme_override_colors/font_color = Color(0.6, 0.9, 1.0, 1)
theme_override_font_sizes/font_size = 12

[node name="ClearButton" type="Button" parent="VBox/Content/ScriptEditorApp/VBoxContainer/Toolbar"]
layout_mode = 2
text = " ðŸ—‘ Clear "
theme_override_colors/font_color = Color(0.8, 0.5, 0.5, 1)
theme_override_font_sizes/font_size = 12

[node name="FileLabel" type="Label" parent="VBox/Content/ScriptEditorApp/VBoxContainer/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Unsaved"
theme_override_colors/font_color = Color(0.4, 0.4, 0.55, 1)
theme_override_font_sizes/font_size = 11
vertical_alignment = 1
horizontal_alignment = 2

[node name="StatusLabel" type="Label" parent="VBox/Content/ScriptEditorApp/VBoxContainer/Toolbar"]
layout_mode = 2
custom_minimum_size = Vector2(60, 0)
text = "Ready"
theme_override_colors/font_color = Color(0.4, 0.6, 0.4, 1)
theme_override_font_sizes/font_size = 11
vertical_alignment = 1
horizontal_alignment = 2

[node name="VSplitContainer" type="VSplitContainer" parent="VBox/Content/ScriptEditorApp/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 280

[node name="CodeEdit" type="CodeEdit" parent="VBox/Content/ScriptEditorApp/VBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_code")
theme_override_colors/font_color = Color(0.88, 0.88, 0.95, 1)
theme_override_colors/caret_color = Color(0.4, 0.9, 1.0, 1)
theme_override_font_sizes/font_size = 13

[node name="OutputPanel" type="PanelContainer" parent="VBox/Content/ScriptEditorApp/VBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
custom_minimum_size = Vector2(0, 100)
theme_override_styles/panel = SubResource("StyleBoxFlat_output")

[node name="RichTextLabel" type="RichTextLabel" parent="VBox/Content/ScriptEditorApp/VBoxContainer/VSplitContainer/OutputPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
theme_override_colors/default_color = Color(0.75, 0.95, 0.75, 1)
theme_override_font_sizes/normal_font_size = 12
selection_enabled = true
text = ""
